  point of #473 (Reorganizing /skins/cps_styles/).
- Added a declaration for the stylesheet of CPSBoxes. This is a step for the fix
  of bug #770.
- Modified some ZPT files so that they are valid XHTML 1.0 Strict. This is a
  work in progress to fix #773 "Using XHTML 1.0 Strict by default for CPS
  sites".
- #816: comments for !copy_submit(accept, reject, unpublish...) missing on
  publication history of a document.
- Gave to the SectionReviewer role the ChangeSubobjectsOrder permission in the
  sections. This is more logical. One who can accept/reject contents in sections
  should also be allowed to order them.
- Gave to the Owner of a document the permission to view his/her submitted
  document.
- fix #535: Redesign the advanced search form (completed)
- #838 use folder_contents as nav action only when explicitly requested in
  content_lib/info_detail
- Replaced portal_url with the new URLTool defined in CPSCore (extending the
  CMF one) to have methods dealing with virtual hosting: now able to get the base
  url (portal absolute url path), get an object absolute url from its relative
  url, and get its breadcrumbs without objects hidden with the virtual
  hosting. Fixes #436.
- fix #846: Added backward compatibility code to avoid recursion on the
  getBaseUrl script just before the portal_url update.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Don't use strings for permission names in the installer.
- Added an example display method for formatting Gestalt's content items.
- Replaced Localizer by TranslationService.
- Moved computeContributors from CPSDocument to the utils module.
- Made the modify transition title more readable
- Roles relevant in context is now an optional argument to the script that
  returns assigned local roles.
- New javascript function getSelectedRadioLabel
- Do not use getBaseUrl and getContextUrl scripts to see if a role is set
  locally, but simply the object relative url.