@@ -73,6 +73,11 @@ or REQUEST=None
 
 Path and URL
 ============
+
+Follow CPSCore/doc/virtual-hosting.txt documentation to see all the ways to
+get url/path information about an object that will not break using virtual
+hosting.
+
 main_template defines
 - context_url:
   this is the minimal url to your context like /cps/foo
