@@ -30,7 +30,7 @@
                 into <span i18n:name="history_dest">
                   <a href="."
                     tal:content="item/dest_title"
-                    tal:attributes="href string:${base_url}${item/dest_container}/">
+                    tal:attributes="href python:utool.getUrlFromRpath(item['dest_container'])">
                     Foo Section
                   </a>
                 </span>
