@@ -8,7 +8,7 @@
   tal:define="action python:test(info['type'] in ('Section', 'Workspace'), '/folder_contents', '')"
   tal:attributes="class python:test(info['hidden'], 'hiddenItem', nothing)">
  <tal:block replace="structure python:path('here/'+ info['icon'])" />
- <a href="" tal:attributes="href string:${base_url}${info/rpath}${action};
+ <a href="" tal:attributes="href string:${info/url}/${action};
                             title info/description">
  <strong><span tal:replace="info/title_or_id">ID</span></strong></a><br />
  <small>
