@@ -67,7 +67,7 @@
                           " />
   </td>
   <td tal:condition="title_in_tabs">
-    <a href="" tal:attributes="href string:${base_url}${info/rpath}${action};
+    <a href="" tal:attributes="href string:${info/url}/${action};
                                title info/description;">
     <strong tal:content="info/title_or_id">ID</strong></a></td>
   <td align="center" tal:condition="type_in_tabs">
