@@ -7,7 +7,7 @@
 <div style="text-align: center"
   tal:define="action python:test(info['type'] in ('Section','Workspace'),
                                  '/folder_contents', '')">
- <a href="" tal:attributes="href string:${base_url}${info/rpath}${action};
+ <a href="" tal:attributes="href string:${info/url}/${action};
                             title info/description">
   <img tal:condition="not:info/preview|nothing"
        tal:replace="structure python:here.getImgTag(info['icon'],
