@@ -9,7 +9,7 @@
   <h2>
     <img tal:replace="structure python:here.getImgTag(info['icon'],
                                        base_url=base_url, title=info['type'])" />
-    <a href="" tal:attributes="href string:${base_url}${info/rpath}${action};">
+    <a href="" tal:attributes="href string:${info/url}/${action};">
     <strong tal:content="info/title_or_id">ID</strong></a>
   </h2>
   <div tal:condition="info/photo|nothing"
