@@ -34,7 +34,10 @@
                   tal:content="item/review_state" i18n:translate=""/>
               </td>
               <td>
-                <a href="." tal:attributes="href string:${base_url}${item/rpath}/"
+                <a href="."
+                  tal:define="utool nocall:here/portal_url;
+                              ob_url python:utool.getUrlFromRpath(item['rpath'])"
+                  tal:attributes="href ob_url"
                   tal:content="item/title">Section 1</a>
               </td>
             </tr>
