@@ -12,7 +12,8 @@ Macro needs
   users python:cpslr[1];
   sorted_groups python:cpslr[2];
   groups python:cpslr[3];
-  portal python:here.portal_url.getPortalObject();
+  utool nocall:here/portal_url;
+  portal python:utool.getPortalObject();
   has_local_roles_blocking portal/acl_users/hasLocalRolesBlocking|nothing;
   local_roles_blocked python:cpslr[4];
   ">
@@ -247,7 +248,9 @@ Assignment table needs:
 
                 <tal:block replace="string:, "
                     condition="not:repeat/url/start" />
-                  <a href="" tal:attributes="href string:${base_url}${url}/folder_localrole_form">
+                  <a href=""
+                    tal:define="role_url python:utool.getUrlFromRpath(url)"
+                    tal:attributes="href string:${role_url}/folder_localrole_form">
                     <tal:block replace="url"/>
                   </a>
                 </tal:block>
