@@ -7,7 +7,7 @@
   wtool here/portal_workflow;
   btool here/portal_boxes;
   context_url python:here.getContextUrl(utool=utool);
-  base_url python:here.getBaseUrl(utool=utool);
+  base_url python:utool.getBaseUrl();
   boxes python:btool.getBoxes(here);
   member mtool/getAuthenticatedMember;
   isAnon mtool/isAnonymousUser;
