@@ -59,6 +59,7 @@ Bug fixes:
   hosting. Fixes #436.
 - fix #846: Added backward compatibility code to avoid recursion on the
   getBaseUrl script just before the portal_url update.
+- Replaced incorrect code producing broken urls using virtual hosting.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Don't use strings for permission names in the installer.
